--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <section class="camera hidden">
         <section class="card center new-pic hidden" id="newPicCard" >
-            <div class="card-image" id="newPic">
+            <div class="card-image hidden" id="newPic">
                 <img src="" alt="new pic" class="pic">
             </div>
             <div class="card-content" id="question">
