--- a/index.html
+++ b/index.html
@@ -15,18 +15,21 @@
     <meta name="apple-mobile-web-app-status-bar" content="#aa7700">
 </head>
 <body class="pink lighten-5">
-    <div class="card" id="first-page">
-        <div class="card-image">
-            <img src="/imgs/taking-pictures.jpg" alt="" srcset="">
-        </div>
-        <div class="card-content">
-            <span class="card-title pink-text text-lighten-1">Instablam</span>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque facilis vitae dolorum distinctio autem quibusdam tempora reiciendis, odit, molestiae asperiores qui aspernatur eum officia non dignissimos quis eligendi! Adipisci, reprehenderit.</p>
-            <div class="right">
-                <button  id="btn-s" class="btn-small pink lighten-1 white-text">Go to Gallery</button>
+    <div class="col s6 l6 center">
+        <div class="card" id="first-page">
+            <div class="card-image" id="firstPageImg">
+                <img src="/imgs/taking-pictures.jpg" alt="" srcset="">
+            </div>
+            <div class="card-content">
+                <span class="card-title pink-text text-lighten-1">Instablam</span>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque facilis vitae dolorum distinctio autem quibusdam tempora reiciendis, odit, molestiae asperiores qui aspernatur eum officia non dignissimos quis eligendi! Adipisci, reprehenderit.</p>
+                <div class="right">
+                    <button  id="btn-s" class="btn-small pink lighten-1 white-text">Go to Gallery</button>
+                </div>
             </div>
         </div>
     </div>
+
 
     <section class=" gallery hidden">
         <div class="row">
