--- a/index.html
+++ b/index.html
@@ -11,25 +11,22 @@
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <link rel="manifest" href="/manifest.json">
     <!-- IOS support -->
-    <link rel="apple-touch-icon" href="/img/icons/icon-96x96.png">
-    <meta name="apple-mobile-web-app-status-bar" content="#aa7700">
+    <link rel="apple-touch-icon" href="/imgs/192.png">
 </head>
 <body class="pink lighten-5">
-    <div class="col s6 l6 center">
-        <div class="card" id="first-page">
-            <div class="card-image" id="firstPageImg">
-                <img src="/imgs/taking-pictures.jpg" alt="" srcset="">
-            </div>
-            <div class="card-content">
-                <span class="card-title pink-text text-lighten-1">Instablam</span>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque facilis vitae dolorum distinctio autem quibusdam tempora reiciendis, odit, molestiae asperiores qui aspernatur eum officia non dignissimos quis eligendi! Adipisci, reprehenderit.</p>
-                <div class="right">
-                    <button  id="btn-s" class="btn-small pink lighten-1 white-text">Go to Gallery</button>
-                </div>
+
+    <div class="card" id="first-page">
+        <div class="card-image" id="firstPageImg">
+            <img src="/imgs/taking-pictures.jpg" alt="" srcset="">
+        </div>
+        <div class="card-content">
+            <span class="card-title pink-text text-lighten-1">Instablam</span>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque facilis vitae dolorum distinctio autem quibusdam tempora reiciendis, odit, molestiae asperiores qui aspernatur eum officia non dignissimos quis eligendi! Adipisci, reprehenderit.</p>
+            <div class="right">
+                <button  id="btn-s" class="btn-small pink lighten-1 white-text">Go to Gallery</button>
             </div>
         </div>
     </div>
-
 
     <section class=" gallery hidden">
         <div class="row">
@@ -113,7 +110,7 @@
 
     <section class="camera hidden">
         <section class="card center new-pic hidden" id="newPicCard" >
-            <div class="card-image hidden" id="newPic">
+            <div class="card-image" id="newPic">
                 <img src="" alt="new pic" class="pic">
             </div>
             <div class="card-content" id="question">
