--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         </div>
     </div>
 
-    <section class=" gallery hidden">
-        <div class="row">
+    <section class="gallery hidden">
+        <div id="cardsContainer" class="row">
             <div class="col s12 l4">
                 <div class="card">
                     <div class="card-image">
-                        <img src="/imgs/golden.jpg" alt="">
+                        <img src="/imgs/golden.jpg" id="img" alt="">
                     </div>
                     <div class="card-content">
                         <p>City: Gothenburg</p>
@@ -50,7 +50,7 @@
             <div class="col s12 l4">          
                 <div class="card">
                     <div class="card-image">
-                        <img src="/imgs/huskey.jpg" alt="">
+                        <img src="/imgs/huskey.jpg" id="img"  alt="">
                     </div>
                     <div class="card-content">
                         <p>City: Oslo</p>
@@ -67,7 +67,7 @@
             <div class="col s12 l4">                
                 <div class="card">
                     <div class="card-image">
-                        <img src="/imgs/samoyed.jpg" alt="">
+                        <img src="/imgs/samoyed.jpg" id="img" alt="">
                     </div>
                     <div class="card-content">
                         <p>City: Helsinki</p>
@@ -84,7 +84,7 @@
             <div class="col s12 l4">          
                 <div class="card">
                     <div class="card-image">
-                        <img src="/imgs/pakotah.jpg" alt="">
+                        <img src="/imgs/pakotah.jpg" id="img" alt="">
                     </div>
                     <div class="card-content">
                         <p>City: London</p>
