--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link type="text/css" href="/css/styles.css" rel="stylesheet">
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <link rel="manifest" href="/manifest.json">
+    <link rel="shortcut icon" href="imgs/192.png" >
     <!-- IOS support -->
     <link rel="apple-touch-icon" href="/imgs/192.png">
 </head>
