add switch camera btn

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script type="text/javascript" src="/js/materialize.min.js"></script>
     <link rel="manifest" href="/manifest.json">
     <link rel="shortcut icon" href="imgs/192.png" >
+    <meta name="theme-color" content="#fce4ec"/>
     <!-- IOS support -->
     <link rel="apple-touch-icon" href="/imgs/192.png">
 </head>
@@ -22,7 +23,10 @@
         </div>
         <div class="card-content">
             <span class="card-title pink-text text-lighten-1">Instablam</span>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque facilis vitae dolorum distinctio autem quibusdam tempora reiciendis, odit, molestiae asperiores qui aspernatur eum officia non dignissimos quis eligendi! Adipisci, reprehenderit.</p>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Cumque 
+                facilis vitae dolorum distinctio autem quibusdam tempora reiciendis,
+                odit, molestiae asperiores qui aspernatur eum officia non dignissimos
+                quis eligendi! Adipisci, reprehenderit.</p> <br>
             <div class="right">
                 <button  id="btn-s" class="btn-small pink lighten-1 white-text">Go to Gallery</button>
             </div>
@@ -131,6 +135,7 @@
             <button class="btn-large pink" id="cameraOn">Camera On</button>
             <button class="btn-large pink hidden" id="cameraOff">Camera Off</button>
             <button class="btn-large pink hidden" id="takePic">Take a photo</button>
+            <button class="btn-large pink hidden" id="switchCamera">Switch camera</button>
             <button class="btn-large pink lighten-2"  id="backToGallery">Back To Gallery</button>
         </div>
     </section>
